--- a/Job/src/main/resources/application.properties
+++ b/Job/src/main/resources/application.properties
@@ -2,12 +2,20 @@ spring.application.name=JobService
 
 server.port=8082
 
+#database
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=12345678
 spring.jpa.hibernate.ddl-auto=update 
 
-
+#eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+#zipkin
+management.tracing.sampling.probability=1.0
+
+#confgi-server
+spring.config.import=optional:configserver:http://localhost:8080
+#spring.profiles.active=dev
