--- a/company/src/main/resources/application.properties
+++ b/company/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 #zipkin
 management.tracing.sampling.probability=1.0
+
+
+#spring.config.import=optional:configserver:http://localhost:8080
