--- a/Job/src/main/resources/application.properties
+++ b/Job/src/main/resources/application.properties
@@ -19,3 +19,19 @@ management.tracing.sampling.probability=1.0
 #confgi-server
 spring.config.import=optional:configserver:http://localhost:8080
 #spring.profiles.active=dev
+
+
+# Resilience4j Circuit Breaker Configuration
+resilience4j.circuitbreaker.instances.companyBreaker.register-health-indicator=true
+resilience4j.circuitbreaker.instances.companyBreaker.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.companyBreaker.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.companyBreaker.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.companyBreaker.waitDurationInOpenState=10s
+resilience4j.circuitbreaker.instances.companyBreaker.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.companyBreaker.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.companyBreaker.sliding-window-type=count_based
+
+# Spring Boot Actuator Configuration
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
